# cpp-libsqlite3

./: .gitignore  .gitlab-ci.yml  README.md  cpp-libsqlite3.wrap  meson.build  meson_options.txt
libsqlite3/: meson.build
libsqlite3/include/sqlite3pp/private/: api.hpp  exportAPI.hpp
libsqlite3/private/: meson.build
libsqlite3/private/sqlite3pp/impl/database/: connection.hpp
libsqlite3/private/src/sqlite3pp/database/: connection.cpp
libsqlite3/public/: meson.build
libsqlite3/public/include/sqlite3pp/api/: api.hpp
test/: meson.build
test/tests/: SimpleTest.cpp
